@@ -1,0 +1,24 @@
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+    <title>Down For Scheduled Maintenance</title>
+    <link href="images/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
+    <link href="images/favicon.ico" rel="icon" type="image/vnd.microsoft.icon" />
+    <link href="themedstyles.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body id="login-wrapper">
+    <img src="images/login_gradient.gif" id="login-gradient" />
+    <div id="outer">
+      <div id="inner">
+        <h1 class="kscreentitle" style="margin-top: 50px">
+          <span></span>
+        </h1>
+	<h2 style="margin-top: 20px; text-align: center">Down For
+	Scheduled Maintenance</h2>
+        <p align="center">We're sorry for the interruption.  This site
+        will be briefly down while we perform system maintenance.
+        Please try back in a few moments.</p>
+      </div>
+    </div>
+  </body>
+</html>
