@@ -4,7 +4,9 @@ karl package Changelog
 Unreleased
 ----------
 
-- ...
+- LP# 522173: Add a "down for maintenance" HTML page in views/static
+  with relative links to styling and images which can be served
+  directly by Apache.
 
 3.16 (2010-02-12)
 -----------------
